--- a/README.adoc
+++ b/README.adoc
@@ -267,6 +267,7 @@ The source for the tests is located in src/k8s** folders. The generated test out
 
 ==== Changelog
 
+- 5.8 - slew of different fixes for the generator from different people, particular thanks to NANASHI0X74 for sticky ones!
 . 5.7 - includes fix for enums that contain spaces
 - 5.5 - this is a release focused on form, multi-part uploads, file uploads and downloads and enhancing the parameters as lodged in
 a couple of tickets. This release deletes unused models from Inline form models.
