--- a/README.adoc
+++ b/README.adoc
@@ -17,12 +17,12 @@ To use it, do something like this:
       <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
-        <version>5.2.0</version>
+        <version>5.2.1</version>
         <dependencies>
           <dependency>
             <groupId>com.bluetrainsoftware.maven</groupId>
             <artifactId>openapi-dart-generator</artifactId>
-            <version>5.9</version>
+            <version>5.10</version>
           </dependency>
         </dependencies>
         <executions>
@@ -64,7 +64,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath "com.bluetrainsoftware.maven:openapi-dart-generator:5.4"
+		classpath "com.bluetrainsoftware.maven:openapi-dart-generator:5.10"
 	}
 }
 ----
@@ -267,6 +267,7 @@ The source for the tests is located in src/k8s** folders. The generated test out
 
 ==== Changelog
 
+- 5.10 - removal of an unnecessary date/time typecast for null safety
 - 5.9 - fix for null safe 2d APIs (via PiotrMitkowski)
 - 5.8 - slew of different fixes for the generator from different people, particular thanks to NANASHI0X74 for sticky ones!
 . 5.7 - includes fix for enums that contain spaces
