--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,12 @@
 This plugin was originally designed for use by the OpenAPi v3 Maven Plugin, but works with the
 command line generator and the Gradle plugin. it generates _excellent_ Dart code and uses Dio.
 
+NOTE: we are currently using 5.2.1 of the OpenAPI generate and have no plans to update until an issue that is specific to the core crops up that we cannot resolve. The OpenAPI Maven generator updates primarily because it is the only way they can release new versions of individual generators, which we think is not the right way to deal with language support.
+
+== Sponsors
+
+This project is sponsored by https://www.featurehub.io[FeatureHub]. 
+
 == How to use
 
 This tool can be used via Maven, Gradle or from the command line. There are important additional properties that
@@ -22,7 +28,7 @@ To use it, do something like this:
           <dependency>
             <groupId>com.bluetrainsoftware.maven</groupId>
             <artifactId>openapi-dart-generator</artifactId>
-            <version>5.10</version>
+            <version>5.12</version>
           </dependency>
         </dependencies>
         <executions>
@@ -267,6 +273,7 @@ The source for the tests is located in src/k8s** folders. The generated test out
 
 ==== Changelog
 
+- 5.12 - contributed fixes for inherited types (via https://github.com/roald-di)
 - 5.11 - fix date/datetime strings in queries to not be encoded. Updated to use 5.2.1 of OpenAPI. Fixed a bunch
 of templating issues that arose because of it.
 - 5.10 - removal of an unnecessary date/time typecast for null safety
