--- a/README.adoc
+++ b/README.adoc
@@ -395,7 +395,10 @@ mvn clean verify
 The source for the tests is located in src/k8s** folders. The generated test output will be in target/it/k8s**.
 
 ==== Changelog
-- 6.1 - migrate to the *6.0.1* version of OpenAPI, move to Java 11, swap to Kotlin. This is advertised as a breaking change and has led to some classes changing their names, adding new classes which didn't exist before. 
+- 6.1 - migrate to the *6.0.1* version of OpenAPI, move to Java 11, swap to Kotlin. This is advertised as a breaking change and has led to some classes changing their names, adding new classes which didn't exist before.
+ * fields that are marked as `required` in the OpenAPI but have default values are not required in constructors (Dart fields with default values cannot be required)
+ * previously required = non-null, now nullable = non-null, required can be null, it just means it has
+   to be sent in the data.
 - 5.13 - ability to disable the copyWith generation (see above)
 - 5.12 - contributed fixes for inherited types (via https://github.com/roald-di)
 - 5.11 - fix date/datetime strings in queries to not be encoded. Updated to use 5.2.1 of OpenAPI. Fixed a bunch
