--- a/README.adoc
+++ b/README.adoc
@@ -3,11 +3,11 @@
 This plugin was originally designed for use by the OpenAPi v3 Maven Plugin, but works with the
 command line generator and the Gradle plugin. it generates _excellent_ Dart code and uses Dio.
 
-NOTE: we are currently using 5.2.1 of the OpenAPI Maven Plugin and have no plans to update until an issue that is specific to the core crops up that we cannot resolve. The OpenAPI Maven generator updates primarily because it is the only way they can release new versions of individual generators, which we think is not the right way to deal with language support.
+NOTE: we are currently using 6.0.1 of the OpenAPI Maven Plugin. 
 
 == Sponsors
 
-This project is sponsored by https://www.featurehub.io[FeatureHub]. 
+This project is part of the Open Source project https://www.featurehub.io[FeatureHub], please consider sponsoring that project to support this generator if you use it.  
 
 == How to use
 
@@ -395,12 +395,21 @@ mvn clean verify
 The source for the tests is located in src/k8s** folders. The generated test output will be in target/it/k8s**.
 
 ==== Changelog
-- 6.1 - migrate to the *6.0.1* version of OpenAPI, move to Java 11, swap to Kotlin. This is advertised as a breaking change and has led to some classes changing their names, adding new classes which didn't exist before.
+- 6.1 - migrate to the *6.0.1* version of OpenAPI, move to Java 11, swap to Kotlin. This is advertised as a breaking change and has led to some classes changing their names, adding new classes which didn't exist before. This is
+ a significant rewrite and retest of the functionality so we encourage people
+ to report bugs and issues to us. 
  * fields that are marked as `required` in the OpenAPI but have default values are not required in constructors (Dart fields with default values cannot be required)
- * previously `required` = non-null, now nullable = non-null, required can be null, it just means it has
-   to be sent in the data. To revert to 5.x behaviour where !required = nullable, add an additional property
-   of `x-use-5x-nullable=true`. For compatibility with other languages, we recommend you do not stick
-   with this for long.
+ * previously `required` = non-null, !required = non-null. This behaviour
+   has been refined. In Dart terms, it does not make sense for optional fields
+   to not be nullable, so that remains, but required fields can now be
+   nullable as long as they have a default value (or are a list or map). 
+ * required fields are now _required_ - so if they aren't in the incoming JSON
+   data we will throw a serialisation error. Optional fields if they are empty
+   or null will not be sent (unless the `generateNullValuesToJson` additional
+   property is used, in which case fields will always be be added).
+ * numeric fields are no longer "cast", they are always converted to their
+   respective variants, toInt() or toDouble() - down through lists and so forth.
+ 
 - 5.13 - ability to disable the copyWith generation (see above)
 - 5.12 - contributed fixes for inherited types (via https://github.com/roald-di)
 - 5.11 - fix date/datetime strings in queries to not be encoded. Updated to use 5.2.1 of OpenAPI. Fixed a bunch
