--- a/README.adoc
+++ b/README.adoc
@@ -409,7 +409,11 @@ The source for the tests is located in src/k8s** folders. The generated test out
    property is used, in which case fields will always be be added).
  * numeric fields are no longer "cast", they are always converted to their
    respective variants, toInt() or toDouble() - down through lists and so forth.
- 
+ * arrays and maps which have the special provided default values are always
+   `const` following Dart's requirements around constructors. This means you
+   cannot "add" to them - i.e. create a model object and then add to the 
+   items in of the lists. If you wish to do this, you _must_ provide a non-const
+   value for the Map or List in the constructor. 
 - 5.13 - ability to disable the copyWith generation (see above)
 - 5.12 - contributed fixes for inherited types (via https://github.com/roald-di)
 - 5.11 - fix date/datetime strings in queries to not be encoded. Updated to use 5.2.1 of OpenAPI. Fixed a bunch
