--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -2,7 +2,9 @@
 
 == 6.x Series is based on OpenAPI 6
 
-- 6.2 - migrate default lists and maps back to 5.x style
+- 6.3 - fix issue with required parameters (broken by 6.2), adding back support for inheritance broken by 6.1 upgrade. Samples for inheritance now included in
+general testing and release pipeline, along with Dart test.
+- 6.2 - migrate default lists and maps back to 5.x style. *DO NOT USE*
 
  * The 6.1 style of using const cause a lot of breakage and a difficult to use
 API. Where before it would set default list and map parameters such as 
